# derive-network

./: .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CANONICALIZATION.md
examples/: playground_ui.py  seed_data.py  work_energy.py
infra/: docker-compose.yml  neo4j.conf
schemas/: __init__.py
services/api/: Dockerfile  main.py
services/canonicalizer/: canon.py  main.py
services/graphstore/: main.py
src/derive_network/: __init__.py  canonicalizer.py  graphstore.py  models.py
tests/: test_api.py  test_canonicalizer.py  test_canonicalizer_module.py  test_graphstore.py
web/viewer/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
web/viewer/src/: main.ts
