[tool.poetry]
name = "derive-network"
version = "0.1.0"
description = "Derivation Network monorepo"
authors = ["AutoGen <autogen@example.com>"]
readme = "README.md"
packages = [
  { include = "derive_network", from = "src" },
  { include = "services" },
  { include = "examples" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sympy = "^1.12"
pydantic = "^2.6.4"
networkx = "^3.2"
neo4j = "^5.19"
typing-extensions = "^4.10.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
antlr4-python3-runtime = "4.11.*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
namespace_packages = true

[[tool.mypy.overrides]]
module = ["sympy", "sympy.*", "networkx", "networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
